antlr4-runtime/PankoParser.cpp

// Generated from /home/jack/Documents/Panko/Panko.g4 by ANTLR 4.9.1


#include "PankoListener.h"
#include "PankoVisitor.h"

#include "PankoParser.h"


using namespace antlrcpp;
using namespace antlr4;

PankoParser::PankoParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

PankoParser::~PankoParser() {
  delete _interpreter;
}

std::string PankoParser::getGrammarFileName() const {
  return "Panko.g4";
}

const std::vector<std::string>& PankoParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& PankoParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- FileContext ------------------------------------------------------------------

PankoParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PankoParser::FileContext::MODULE() {
  return getToken(PankoParser::MODULE, 0);
}

tree::TerminalNode* PankoParser::FileContext::IDENTIFIER() {
  return getToken(PankoParser::IDENTIFIER, 0);
}

tree::TerminalNode* PankoParser::FileContext::SEMICLN() {
  return getToken(PankoParser::SEMICLN, 0);
}

tree::TerminalNode* PankoParser::FileContext::EOF() {
  return getToken(PankoParser::EOF, 0);
}

std::vector<PankoParser::StatementContext *> PankoParser::FileContext::statement() {
  return getRuleContexts<PankoParser::StatementContext>();
}

PankoParser::StatementContext* PankoParser::FileContext::statement(size_t i) {
  return getRuleContext<PankoParser::StatementContext>(i);
}


size_t PankoParser::FileContext::getRuleIndex() const {
  return PankoParser::RuleFile;
}

void PankoParser::FileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFile(this);
}

void PankoParser::FileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFile(this);
}


antlrcpp::Any PankoParser::FileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PankoVisitor*>(visitor))
    return parserVisitor->visitFile(this);
  else
    return visitor->visitChildren(this);
}

PankoParser::FileContext* PankoParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, PankoParser::RuleFile);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(36);
    match(PankoParser::MODULE);
    setState(37);
    match(PankoParser::IDENTIFIER);
    setState(38);
    match(PankoParser::SEMICLN);
    setState(40); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(39);
      statement();
      setState(42); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << PankoParser::TYPE)
      | (1ULL << PankoParser::TRUE)
      | (1ULL << PankoParser::FALSE)
      | (1ULL << PankoParser::IF)
      | (1ULL << PankoParser::WHILE)
      | (1ULL << PankoParser::KW_NULL)
      | (1ULL << PankoParser::INT)
      | (1ULL << PankoParser::FLOAT)
      | (1ULL << PankoParser::RETURN)
      | (1ULL << PankoParser::BITNOT)
      | (1ULL << PankoParser::NOT)
      | (1ULL << PankoParser::OPAREN)
      | (1ULL << PankoParser::OBRACE)
      | (1ULL << PankoParser::IDENTIFIER)
      | (1ULL << PankoParser::INTLIT)
      | (1ULL << PankoParser::FLOATLIT))) != 0));
    setState(44);
    match(PankoParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

PankoParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PankoParser::BlockContext::OBRACE() {
  return getToken(PankoParser::OBRACE, 0);
}

tree::TerminalNode* PankoParser::BlockContext::CBRACE() {
  return getToken(PankoParser::CBRACE, 0);
}

std::vector<PankoParser::StatementContext *> PankoParser::BlockContext::statement() {
  return getRuleContexts<PankoParser::StatementContext>();
}

PankoParser::StatementContext* PankoParser::BlockContext::statement(size_t i) {
  return getRuleContext<PankoParser::StatementContext>(i);
}


size_t PankoParser::BlockContext::getRuleIndex() const {
  return PankoParser::RuleBlock;
}

void PankoParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void PankoParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


antlrcpp::Any PankoParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PankoVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

PankoParser::BlockContext* PankoParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 2, PankoParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    match(PankoParser::OBRACE);
    setState(50);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << PankoParser::TYPE)
      | (1ULL << PankoParser::TRUE)
      | (1ULL << PankoParser::FALSE)
      | (1ULL << PankoParser::IF)
      | (1ULL << PankoParser::WHILE)
      | (1ULL << PankoParser::KW_NULL)
      | (1ULL << PankoParser::INT)
      | (1ULL << PankoParser::FLOAT)
      | (1ULL << PankoParser::RETURN)
      | (1ULL << PankoParser::BITNOT)
      | (1ULL << PankoParser::NOT)
      | (1ULL << PankoParser::OPAREN)
      | (1ULL << PankoParser::OBRACE)
      | (1ULL << PankoParser::IDENTIFIER)
      | (1ULL << PankoParser::INTLIT)
      | (1ULL << PankoParser::FLOATLIT))) != 0)) {
      setState(47);
      statement();
      setState(52);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(53);
    match(PankoParser::CBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_declContext ------------------------------------------------------------------

PankoParser::Func_declContext::Func_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PankoParser::Func_declContext::OPAREN() {
  return getToken(PankoParser::OPAREN, 0);
}

tree::TerminalNode* PankoParser::Func_declContext::CPAREN() {
  return getToken(PankoParser::CPAREN, 0);
}

PankoParser::BlockContext* PankoParser::Func_declContext::block() {
  return getRuleContext<PankoParser::BlockContext>(0);
}

std::vector<PankoParser::Typed_identifierContext *> PankoParser::Func_declContext::typed_identifier() {
  return getRuleContexts<PankoParser::Typed_identifierContext>();
}

PankoParser::Typed_identifierContext* PankoParser::Func_declContext::typed_identifier(size_t i) {
  return getRuleContext<PankoParser::Typed_identifierContext>(i);
}

std::vector<tree::TerminalNode *> PankoParser::Func_declContext::COMMA() {
  return getTokens(PankoParser::COMMA);
}

tree::TerminalNode* PankoParser::Func_declContext::COMMA(size_t i) {
  return getToken(PankoParser::COMMA, i);
}


size_t PankoParser::Func_declContext::getRuleIndex() const {
  return PankoParser::RuleFunc_decl;
}

void PankoParser::Func_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunc_decl(this);
}

void PankoParser::Func_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunc_decl(this);
}


antlrcpp::Any PankoParser::Func_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PankoVisitor*>(visitor))
    return parserVisitor->visitFunc_decl(this);
  else
    return visitor->visitChildren(this);
}

PankoParser::Func_declContext* PankoParser::func_decl() {
  Func_declContext *_localctx = _tracker.createInstance<Func_declContext>(_ctx, getState());
  enterRule(_localctx, 4, PankoParser::RuleFunc_decl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    dynamic_cast<Func_declContext *>(_localctx)->ret_type = typed_identifier();
    setState(56);
    match(PankoParser::OPAREN);
    setState(65);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << PankoParser::KW_NULL)
      | (1ULL << PankoParser::INT)
      | (1ULL << PankoParser::FLOAT)
      | (1ULL << PankoParser::IDENTIFIER))) != 0)) {
      setState(57);
      dynamic_cast<Func_declContext *>(_localctx)->typed_identifierContext = typed_identifier();
      dynamic_cast<Func_declContext *>(_localctx)->params.push_back(dynamic_cast<Func_declContext *>(_localctx)->typed_identifierContext);
      setState(62);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == PankoParser::COMMA) {
        setState(58);
        match(PankoParser::COMMA);
        setState(59);
        dynamic_cast<Func_declContext *>(_localctx)->typed_identifierContext = typed_identifier();
        dynamic_cast<Func_declContext *>(_localctx)->params.push_back(dynamic_cast<Func_declContext *>(_localctx)->typed_identifierContext);
        setState(64);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(67);
    match(PankoParser::CPAREN);
    setState(68);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

PankoParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PankoParser::StatementContext::getRuleIndex() const {
  return PankoParser::RuleStatement;
}

void PankoParser::StatementContext::copyFrom(StatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Semi_statementContext ------------------------------------------------------------------

PankoParser::ExpressionContext* PankoParser::Semi_statementContext::expression() {
  return getRuleContext<PankoParser::ExpressionContext>(0);
}

tree::TerminalNode* PankoParser::Semi_statementContext::SEMICLN() {
  return getToken(PankoParser::SEMICLN, 0);
}

PankoParser::Var_declContext* PankoParser::Semi_statementContext::var_decl() {
  return getRuleContext<PankoParser::Var_declContext>(0);
}

PankoParser::Return_statementContext* PankoParser::Semi_statementContext::return_statement() {
  return getRuleContext<PankoParser::Return_statementContext>(0);
}

PankoParser::Semi_statementContext::Semi_statementContext(StatementContext *ctx) { copyFrom(ctx); }

void PankoParser::Semi_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSemi_statement(this);
}
void PankoParser::Semi_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSemi_statement(this);
}

antlrcpp::Any PankoParser::Semi_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PankoVisitor*>(visitor))
    return parserVisitor->visitSemi_statement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Block_statementContext ------------------------------------------------------------------

PankoParser::Func_declContext* PankoParser::Block_statementContext::func_decl() {
  return getRuleContext<PankoParser::Func_declContext>(0);
}

PankoParser::Type_declContext* PankoParser::Block_statementContext::type_decl() {
  return getRuleContext<PankoParser::Type_declContext>(0);
}

PankoParser::If_statementContext* PankoParser::Block_statementContext::if_statement() {
  return getRuleContext<PankoParser::If_statementContext>(0);
}

PankoParser::While_loopContext* PankoParser::Block_statementContext::while_loop() {
  return getRuleContext<PankoParser::While_loopContext>(0);
}

PankoParser::BlockContext* PankoParser::Block_statementContext::block() {
  return getRuleContext<PankoParser::BlockContext>(0);
}

PankoParser::Block_statementContext::Block_statementContext(StatementContext *ctx) { copyFrom(ctx); }

void PankoParser::Block_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock_statement(this);
}
void PankoParser::Block_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock_statement(this);
}

antlrcpp::Any PankoParser::Block_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PankoVisitor*>(visitor))
    return parserVisitor->visitBlock_statement(this);
  else
    return visitor->visitChildren(this);
}
PankoParser::StatementContext* PankoParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 6, PankoParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(84);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<PankoParser::Semi_statementContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(70);
      expression(0);
      setState(71);
      match(PankoParser::SEMICLN);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<PankoParser::Block_statementContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(73);
      func_decl();
      break;
    }

    case 3: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<PankoParser::Semi_statementContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(74);
      var_decl();
      setState(75);
      match(PankoParser::SEMICLN);
      break;
    }

    case 4: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<PankoParser::Block_statementContext>(_localctx));
      enterOuterAlt(_localctx, 4);
      setState(77);
      type_decl();
      break;
    }

    case 5: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<PankoParser::Block_statementContext>(_localctx));
      enterOuterAlt(_localctx, 5);
      setState(78);
      if_statement();
      break;
    }

    case 6: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<PankoParser::Block_statementContext>(_localctx));
      enterOuterAlt(_localctx, 6);
      setState(79);
      while_loop();
      break;
    }

    case 7: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<PankoParser::Block_statementContext>(_localctx));
      enterOuterAlt(_localctx, 7);
      setState(80);
      block();
      break;
    }

    case 8: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<PankoParser::Semi_statementContext>(_localctx));
      enterOuterAlt(_localctx, 8);
      setState(81);
      return_statement();
      setState(82);
      match(PankoParser::SEMICLN);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

PankoParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PankoParser::ExpressionContext::getRuleIndex() const {
  return PankoParser::RuleExpression;
}

void PankoParser::ExpressionContext::copyFrom(ExpressionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Paren_exprContext ------------------------------------------------------------------

tree::TerminalNode* PankoParser::Paren_exprContext::OPAREN() {
  return getToken(PankoParser::OPAREN, 0);
}

PankoParser::ExpressionContext* PankoParser::Paren_exprContext::expression() {
  return getRuleContext<PankoParser::ExpressionContext>(0);
}

tree::TerminalNode* PankoParser::Paren_exprContext::CPAREN() {
  return getToken(PankoParser::CPAREN, 0);
}

PankoParser::Paren_exprContext::Paren_exprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void PankoParser::Paren_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParen_expr(this);
}
void PankoParser::Paren_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParen_expr(this);
}

antlrcpp::Any PankoParser::Paren_exprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PankoVisitor*>(visitor))
    return parserVisitor->visitParen_expr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Unary_exprContext ------------------------------------------------------------------

PankoParser::Unary_operatorContext* PankoParser::Unary_exprContext::unary_operator() {
  return getRuleContext<PankoParser::Unary_operatorContext>(0);
}

PankoParser::ExpressionContext* PankoParser::Unary_exprContext::expression() {
  return getRuleContext<PankoParser::ExpressionContext>(0);
}

PankoParser::Unary_exprContext::Unary_exprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void PankoParser::Unary_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnary_expr(this);
}
void PankoParser::Unary_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnary_expr(this);
}

antlrcpp::Any PankoParser::Unary_exprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PankoVisitor*>(visitor))
    return parserVisitor->visitUnary_expr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Access_exprContext ------------------------------------------------------------------

std::vector<tree::TerminalNode *> PankoParser::Access_exprContext::IDENTIFIER() {
  return getTokens(PankoParser::IDENTIFIER);
}

tree::TerminalNode* PankoParser::Access_exprContext::IDENTIFIER(size_t i) {
  return getToken(PankoParser::IDENTIFIER, i);
}

std::vector<tree::TerminalNode *> PankoParser::Access_exprContext::PERIOD() {
  return getTokens(PankoParser::PERIOD);
}

tree::TerminalNode* PankoParser::Access_exprContext::PERIOD(size_t i) {
  return getToken(PankoParser::PERIOD, i);
}

PankoParser::Access_exprContext::Access_exprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void PankoParser::Access_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAccess_expr(this);
}
void PankoParser::Access_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAccess_expr(this);
}

antlrcpp::Any PankoParser::Access_exprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PankoVisitor*>(visitor))
    return parserVisitor->visitAccess_expr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Complex_assignmentContext ------------------------------------------------------------------

PankoParser::ExpressionContext* PankoParser::Complex_assignmentContext::expression() {
  return getRuleContext<PankoParser::ExpressionContext>(0);
}

tree::TerminalNode* PankoParser::Complex_assignmentContext::INC() {
  return getToken(PankoParser::INC, 0);
}

tree::TerminalNode* PankoParser::Complex_assignmentContext::DEC() {
  return getToken(PankoParser::DEC, 0);
}

PankoParser::Complex_assignmentContext::Complex_assignmentContext(ExpressionContext *ctx) { copyFrom(ctx); }

void PankoParser::Complex_assignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComplex_assignment(this);
}
void PankoParser::Complex_assignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComplex_assignment(this);
}

antlrcpp::Any PankoParser::Complex_assignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PankoVisitor*>(visitor))
    return parserVisitor->visitComplex_assignment(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Binary_exprContext ------------------------------------------------------------------

PankoParser::Binary_operatorContext* PankoParser::Binary_exprContext::binary_operator() {
  return getRuleContext<PankoParser::Binary_operatorContext>(0);
}

std::vector<PankoParser::ExpressionContext *> PankoParser::Binary_exprContext::expression() {
  return getRuleContexts<PankoParser::ExpressionContext>();
}

PankoParser::ExpressionContext* PankoParser::Binary_exprContext::expression(size_t i) {
  return getRuleContext<PankoParser::ExpressionContext>(i);
}

PankoParser::Binary_exprContext::Binary_exprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void PankoParser::Binary_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBinary_expr(this);
}
void PankoParser::Binary_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBinary_expr(this);
}

antlrcpp::Any PankoParser::Binary_exprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PankoVisitor*>(visitor))
    return parserVisitor->visitBinary_expr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Id_exprContext ------------------------------------------------------------------

tree::TerminalNode* PankoParser::Id_exprContext::IDENTIFIER() {
  return getToken(PankoParser::IDENTIFIER, 0);
}

PankoParser::Id_exprContext::Id_exprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void PankoParser::Id_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterId_expr(this);
}
void PankoParser::Id_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitId_expr(this);
}

antlrcpp::Any PankoParser::Id_exprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PankoVisitor*>(visitor))
    return parserVisitor->visitId_expr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Simple_assignmentContext ------------------------------------------------------------------

PankoParser::Assignment_operatorContext* PankoParser::Simple_assignmentContext::assignment_operator() {
  return getRuleContext<PankoParser::Assignment_operatorContext>(0);
}

std::vector<PankoParser::ExpressionContext *> PankoParser::Simple_assignmentContext::expression() {
  return getRuleContexts<PankoParser::ExpressionContext>();
}

PankoParser::ExpressionContext* PankoParser::Simple_assignmentContext::expression(size_t i) {
  return getRuleContext<PankoParser::ExpressionContext>(i);
}

PankoParser::Simple_assignmentContext::Simple_assignmentContext(ExpressionContext *ctx) { copyFrom(ctx); }

void PankoParser::Simple_assignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSimple_assignment(this);
}
void PankoParser::Simple_assignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSimple_assignment(this);
}

antlrcpp::Any PankoParser::Simple_assignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PankoVisitor*>(visitor))
    return parserVisitor->visitSimple_assignment(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Func_exprContext ------------------------------------------------------------------

tree::TerminalNode* PankoParser::Func_exprContext::IDENTIFIER() {
  return getToken(PankoParser::IDENTIFIER, 0);
}

tree::TerminalNode* PankoParser::Func_exprContext::OPAREN() {
  return getToken(PankoParser::OPAREN, 0);
}

tree::TerminalNode* PankoParser::Func_exprContext::CPAREN() {
  return getToken(PankoParser::CPAREN, 0);
}

PankoParser::Argument_listContext* PankoParser::Func_exprContext::argument_list() {
  return getRuleContext<PankoParser::Argument_listContext>(0);
}

PankoParser::Func_exprContext::Func_exprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void PankoParser::Func_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunc_expr(this);
}
void PankoParser::Func_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunc_expr(this);
}

antlrcpp::Any PankoParser::Func_exprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PankoVisitor*>(visitor))
    return parserVisitor->visitFunc_expr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Int_litContext ------------------------------------------------------------------

tree::TerminalNode* PankoParser::Int_litContext::INTLIT() {
  return getToken(PankoParser::INTLIT, 0);
}

PankoParser::Int_litContext::Int_litContext(ExpressionContext *ctx) { copyFrom(ctx); }

void PankoParser::Int_litContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInt_lit(this);
}
void PankoParser::Int_litContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInt_lit(this);
}

antlrcpp::Any PankoParser::Int_litContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PankoVisitor*>(visitor))
    return parserVisitor->visitInt_lit(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Float_litContext ------------------------------------------------------------------

tree::TerminalNode* PankoParser::Float_litContext::FLOATLIT() {
  return getToken(PankoParser::FLOATLIT, 0);
}

PankoParser::Float_litContext::Float_litContext(ExpressionContext *ctx) { copyFrom(ctx); }

void PankoParser::Float_litContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFloat_lit(this);
}
void PankoParser::Float_litContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PankoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFloat_lit(this);
}
